pyroscope.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyroscope
  namespace: pyroscope
  labels:
    app: pyroscope
spec:
  ingressClassName: cilium
  rules:
  - host: pyroscope.go-faster.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pyroscope
            port:
              name: http
